--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,31 @@ VITE_FIREBASE_PROJECT_ID='sinergia-ia-app'
 VITE_FIREBASE_STORAGE_BUCKET='sinergia-ia-app.firebasestorage.app'
 VITE_FIREBASE_MESSAGING_SENDER_ID='163732381367'
 VITE_FIREBASE_APP_ID='1:163732381367:web:b00ac4683f72cb735f3732'
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY='AIzaSyCSPDwnWt-nSNC8u_PtrnxjeoFVAohedbM'
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='sinergia-ia-app.firebaseapp.com'
+NEXT_PUBLIC_FIREBASE_PROJECT_ID='sinergia-ia-app'
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET='sinergia-ia-app.firebasestorage.app'
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID='163732381367'
+NEXT_PUBLIC_FIREBASE_APP_ID='1:163732381367:web:b00ac4683f72cb735f3732'
+
+# Analytics e Tracking para SEO/Conversão
+NEXT_PUBLIC_GA_ID='G-XXXXXXXXXX'
+NEXT_PUBLIC_GOOGLE_ADS_ID='AW-XXXXXXXXX'
+NEXT_PUBLIC_FACEBOOK_PIXEL_ID='XXXXXXXXXXXXXXXXX'
+NEXT_PUBLIC_LINKEDIN_PARTNER_ID='XXXXXXX'
+NEXT_PUBLIC_HOTJAR_ID='XXXXXXX'
+
+# SEO e Domínio
+NEXT_PUBLIC_SITE_URL='https://sinergia.ai'
+NEXT_PUBLIC_SITE_NAME='SinergIA'
+
+# API Keys para integrações
+OPENAI_API_KEY='sk-...'
+RESEND_API_KEY='re_...'
+
+# Database (se necessário)
+DATABASE_URL='postgresql://...'
+
+# Ambiente
+NODE_ENV='production'
