--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "sinergia-business",
   "version": "0.1.0",
@@ -6,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -20,6 +23,7 @@
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@storybook/nextjs-vite": "^9.1.9",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
